--- a/week02/styles/box-model.css
+++ b/week02/styles/box-model.css
@@ -1,15 +1,16 @@
 .callout {
     width: 500px;
-    margin: 2px;
-    border: 10px;
+    margin: 10px;
+    border: 1px black;
     background-color: midnightblue;
+    color: #fff;
 	
 }
 
 .callout img {
-    position: right;
-    margin: 10px;
-    border: 1px;
+    float: right;
+    margin: 0 0 10px 10px;
+    border: 1px black;
 	padding: 2px;
     background-color: gray;
     width: 200px;
@@ -17,8 +18,7 @@
 }
 
 blockquote {
-    margin: 2px;
-	
+    margin: 0;
 }
 
 cite {
