--- a/week02/styles/box-model.css
+++ b/week02/styles/box-model.css
@@ -3,7 +3,7 @@
     margin: 10px;
     border: 1px black;
     padding: 15px;
-    background-color: midnightblue;
+    background-color: #191970;
     color: #fff;
 }
 
