--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,5 @@
 nav {
-    background-color: steelblue;
+    background-color: darkslategrey;
     padding: 10px
 }
 
@@ -10,17 +10,39 @@ nav a {
 }
 
 h1 {
-    color: steelblue;
+    color: darkslategrey;
 }
 
-img {
+main img {
     width: 150px;
     height: auto;
-    border: 1px solid steelblue;
+    border: 1px solid darkslategrey;
     padding: 2px;
     box-shadow: 0 0 20px gray;
 }
 
 p {
-    padding: 10px;
+    padding: 0;
+}
+
+aside {
+    width: 30rem;
+    margin: 1px;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    padding: 1rem;
+    background-color: gainsboro;
+    color: black;
+    text-align: center;
+}
+
+aside img {
+    width: 400px;
+    height: auto;
+    box-shadow: 0 0 20px gray;
+}
+
+footer{
+    margin-top: 1em;
+    border-top: 1px solid #000;
+    text-align: center;
 }
