--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -12,7 +12,7 @@
     --nav-backround-color:var(--primary-color);
     --nav-link-color:var(--accent1-color);
     --nav-hover-link-color:var(--accent2-color);
-    --nav-hover-backround-color:var(--secondary-color);
+    --nav-hover-background-color:var(--secondary-color);
 }
 
 body{
@@ -35,7 +35,7 @@ p{
 }
 
 nav {
-    background-color: var(--nav-backround-color);
+    background-color: var(--nav-background-color);
     font-size: 1.2rem;
     display: flex;
 }
@@ -50,5 +50,5 @@ nav a:link, nav a:visited {
 }
 nav a:hover {
     color: var(--nav-hover-link-color);
-    background-color: var(--nav-hover-backround-color);
+    background-color: var(--nav-hover-background-color);
 }
