--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -96,7 +96,7 @@ article {
     height: auto;
     margin: 10px;
     padding: 5px;
-    border: 1px, color(black);
+    border: 1px;
     opacity: 0.8;
 
 }
@@ -126,7 +126,7 @@ section p {
     height: auto;
     margin: 10px;
     padding: 5px;
-    border: 1px, color(black);
+    border: 1px;
 }
 
 section img{
