--- a/styles/quiz.css
+++ b/styles/quiz.css
@@ -74,7 +74,7 @@ footer {
     margin: 1rem auto 0;
 }
 
-.form-item {
+div {
     display: grid;
     align-items: center;
     margin-top: 1.5rem;
