--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap');
 :root {
-    --primary-color: #002E2C;
-    --secondary-color: #035E7B;
-    --accent1-color: #E3E7AF;
-    --accent2-color: #A2A77F;
+    --primary-color: #035E7B;
+    --secondary-color:#002E2C;
+    --accent1-color: #EFF1C5;
+    --accent2-color: #E3E7AF;
+    
 
     --heading-font: 'roboto', serif;
     --paragraph-font:'nunito', serif;
@@ -13,15 +14,18 @@
     --nav-link-color:var(--accent1-color);
     --nav-hover-link-color:var(--accent2-color);
     --nav-hover-background-color:var(--secondary-color);
+
 }
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
 }
 
+body{
+    background-color: var(--secondary-color);
+}
 h1, h2, h3, h4, h5, h6 {
     font-family: var(--heading-font);
     color: var(--accent2-color);
@@ -50,27 +54,32 @@ header,footer,.grid,.maingrid{
 }
 
 nav {
-    display: flex;
+    display: grid;
     justify-content: space-around;
     align-items: center;
+    grid-template-columns: 70px 1fr 1fr 1fr 1fr;
     background-color: var(--primary-color);
     padding-left: 5px;
     padding-right: 5px;
+    font-size: larger;
+    font-family:var(--paragraph-font);
+
 }
 
 nav img {
     width: 70px;
     height: auto;
     padding: 0;
-    margin: 0;
+    margin: 0 auto;
 }
 
 nav a {
     display:block;
     color:var(--nav-link-color);
     text-decoration: none;
-    padding: 5px;
-    height: 20px;
+    padding: 30px;
+    margin:0 auto;
+    
 }
 
 nav a:link, nav a:visited {
@@ -79,7 +88,7 @@ nav a:link, nav a:visited {
 
 nav a:hover {
     color: var(--nav-hover-link-color);
-    /* background-color: var(--nav-hover-background-color); */
+    background-color: var(--nav-hover-background-color);
 }
 
 .hero img {
@@ -165,10 +174,9 @@ section p {
     display: flex;
     background-color:var(--primary-color);
     width: 840px;
-    /* height: auto;
-    margin: 10px;
-    padding: 5px;
-    border: 1px; */
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-bottom: 3rem;
 }
 
 figure{
@@ -293,7 +301,7 @@ button {
 
 button:hover {
     background-color: var(--primary-color);
-    color: var(--accent1-color);
+    color: var(--accent2-color);
 }
 
 .form-item {
