--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -147,11 +147,12 @@ article {
 .info{
     width:840px;
     margin: 0 auto;
-    padding: 1rem var(--primary-color);
+    padding: 1rem ;
     display:flex;
-    font-weight: 900;
+    font-weight: 600;
     justify-content: center;
     justify-items: center;
+    background-color: var(--primary-color);
     
 }
 .info p{
