--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -5,6 +5,7 @@
     --secondary-color:#00524E;
     --accent1-color: #E3E7AF;
     --accent2-color: #EFF1C5;
+    --accent3-color: #B1B592;
     
 
     --heading-font: 'roboto', serif;
@@ -110,8 +111,6 @@ nav a:hover {
 
 div {
     position: relative;
-    width: 840px;
-    display: grid;
     height: auto;
 }
 
@@ -192,6 +191,24 @@ article {
     font-family: var(--paragraph-font);
 }
 
+.tripsbutton {
+    display: grid;
+    justify-content: center;
+    justify-items: center;
+    color: gainsboro;
+    height: 3rem;
+    
+    
+}
+
+.tripsbutton button{
+    width: 150px;
+    position: absolute;
+    font-size: larger;
+    font-weight: 700;
+    font-family: var(--paragraph-font);
+}
+
 .banner img {
     position: relative;
     width: 100px;
@@ -267,6 +284,7 @@ figcaption{
     justify-content: center;
     justify-items: center;
     background-color: var(--primary-color);
+    
 }
 
 .grid img {
@@ -410,11 +428,19 @@ table{
     display: grid;
     /* grid-template-columns: 1fr 1; */
     justify-content: center;
-    padding-top: 3rem;
-    padding-bottom: 3rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
     width: 840px;
     margin:0 auto;
     background-color: var(--primary-color);
+    
+}
+
+.table1{
+    padding-bottom: 1rem;
+}
+
+.table2{
     border-bottom: 1px solid #B1B592;
 }
 
@@ -435,10 +461,53 @@ td{
     
     margin:0 auto;
     color: var(--accent2-color);
-    width: 165px;
+    width: 250px;
+    height: 150px;
     text-align: center;
 }
 
 footer h5{
     color: lightseagreen;
+}
+
+.invites {
+    background-color: var(--primary-color);
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 210px 210px 420px;
+    grid-template-rows: 100px 100px 80px;
+    justify-content: center;
+    /* align-items: center; */
+    align-content: center;
+}
+
+.invites img{
+    grid-column:3/4;
+    grid-row-start: 1;
+}
+
+.but1{
+    grid-column-start: 1;
+    /* grid-column-end: 3; */
+    
+    grid-row-start: 3;
+    
+}
+
+.but2{
+    
+    grid-row-start: 3;
+    grid-column-start: 2;
+    
+}
+
+.invites p{
+    align-self: center;
+    justify-self: center;
+    width:360px;
+    grid-column: 1/3;
+}
+.invites h2{
+    align-self: center;
+    grid-column: 1/3;
 }
