--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -325,7 +325,7 @@ footer a {
     padding: 1rem;
     border: 2px solid rgba(0, 0, 0, 0.1);
     border-radius: 1rem;
-    background-color: var(--accent1-color);
+    background-color: var(--primary-color);
     display: grid;
     height: auto;
 }
@@ -343,7 +343,7 @@ footer a {
 
 legend {
     padding: 0.2rem;
-    color: var(--primary-color);
+    color: var(--accent1-color);
     font-weight: 900;
 }
 
